<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_bg">

    <LinearLayout
        android:id="@+id/TravelMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#9FCAF0"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="143dp"
            android:background="@color/navy"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_travel_packing_list"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/subtitle_pack_smart"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@android:color/white"
            android:elevation="6dp"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/header_add_to_list"
                android:textSize="22sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints="name"
                android:hint="@string/hint_item_name"
                android:inputType="text" />

            <EditText
                android:id="@+id/edtCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autofillHints="none"
                android:hint="@string/hint_category"
                android:inputType="text" />

            <EditText
                android:id="@+id/edtQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autofillHints="none"
                android:hint="@string/hint_quantity"
                android:inputType="number" />

            <EditText
                android:id="@+id/edtComments"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:autofillHints="none"
                android:gravity="top"
                android:hint="@string/hint_comments"
                android:inputType="textMultiLine" />

        </LinearLayout>

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="#174080"
            android:text="ADD TO PACKING LIST"
            android:textSize="18sp"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/btnView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#145AC7"
            android:text="VIEW PACKING LIST"
            android:textSize="18sp"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/btnExit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="#4780CC"
            android:text="EXIT APP"
            android:textSize="18sp"
            tools:ignore="HardcodedText" />

    </LinearLayout>

</ScrollView>
